Tests code cleanup

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -4,4 +4,12 @@
     <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AwesomeAssertions" />     
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="AwesomeAssertions"/>
+  </ItemGroup>
+  
 </Project>
