Create tests for ExchangeProvider and add Moq package
- Add tests for ExchangeProvider constructor and methods
- Add Moq to Directory.Packages.props
- Add Moq to tests/Directory.Build.props
- Add Moq to ExchangeRateFixtures.csproj
- Create ExchangeProviderTests.cs

--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -5,11 +5,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AwesomeAssertions" />     
+    <PackageReference Include="AwesomeAssertions" />
+    <PackageReference Include="Moq" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="AwesomeAssertions"/>
+    <Using Include="Moq" />
   </ItemGroup>
   
 </Project>
