--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,13 +2,7 @@ name: "Main Build Process"
 
 # Runs on main branch commits, 
 # every commit in a pull request, any published release.
-on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["show-test-results-and-coverage-in-pr-with-github-actions"]  
-  release:
-    types: [published]
+on: [pull_request] 
 
 env:
   REGISTRY: ghcr.io
