--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,13 @@ name: "Main Build Process"
 
 # Runs on main branch commits, 
 # every commit in a pull request, any published release.
-on: [pull_request] 
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["show-test-results-and-coverage-in-pr-with-github-actions"]  
+  release:
+    types: [published]
 
 env:
   REGISTRY: ghcr.io
