Revert "test again"
This reverts commit da1ab466bcba7c554a4bcf10d6b45a17352cc7c0.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["show-test-results-and-coverage-in-pr-with-github-actions"]  
+    branches: ["main", "show-test-results-and-coverage-in-pr-with-github-actions"]  
   release:
     types: [published]
 
