--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["main", "show-test-results-and-coverage-in-pr-with-github-actions"]  
+    branches: ["main"]
   release:
     types: [published]
 
