--- a/tests/ApiFixtures/ApiFixtures.csproj
+++ b/tests/ApiFixtures/ApiFixtures.csproj
@@ -22,6 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\Api\Api.csproj" />
+      <ProjectReference Include="..\TestsCommons\TestsCommons.csproj" />
     </ItemGroup>
 
 </Project>
