Extract API Dtos to Api.Models.Dto project

--- a/src/Api/Api.csproj
+++ b/src/Api/Api.csproj
@@ -24,4 +24,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Api.Models.Dto\Api.Models.Dto.csproj" />
+    </ItemGroup>
+
 </Project>
