Added project reference to Api.Models.Dto and updated Categories page
- Added project reference to Api.Models.Dto
- Updated categories page route to lowercase
- Implemented pre-rendering state check
- Added async data fetching for categories

--- a/src/MudBlazorApp/MudBlazorApp.Client/MudBlazorApp.Client.csproj
+++ b/src/MudBlazorApp/MudBlazorApp.Client/MudBlazorApp.Client.csproj
@@ -14,4 +14,7 @@
       <PackageReference Include="MudBlazor" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Api.Models.Dto\Api.Models.Dto.csproj" />
+    </ItemGroup>    
 </Project>
